[project]
name = "overwatch-lore-downloader"
version = "0.0.1"
dependencies = [
    "requests",
    "bs4",
    "PyMuPDF"
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}